trained half model

--- a/CIFAR_10/test_half.ipynb
+++ b/CIFAR_10/test_half.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,7 @@
     "            j = 0\n",
     "        if key.find('num_batches_tracked') == -1:\n",
     "            useState_dict[key].data = preState_dict[preKeys[j]].data\n",
-    "            if key[-4:] != preKeys[j][-4:]:\n",
-    "                print (key , preKeys[j])\n",
+    "            print (key , preKeys[j])\n",
     "            j +=1\n",
     "    model.load_state_dict(useState_dict)\n",
     "    model.to(device)\n",
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +46,61 @@
      "output_type": "stream",
      "text": [
       "64\n",
-      "50\n"
+      "50\n",
+      "conv1.weight xnor.0.weight\n",
+      "conv1.bias xnor.0.bias\n",
+      "bn1.running_mean xnor.1.running_mean\n",
+      "bn1.running_var xnor.1.running_var\n",
+      "bconv2.bn.weight xnor.3.bn.weight\n",
+      "bconv2.bn.bias xnor.3.bn.bias\n",
+      "bconv2.bn.running_mean xnor.3.bn.running_mean\n",
+      "bconv2.bn.running_var xnor.3.bn.running_var\n",
+      "bconv2.conv.weight xnor.3.conv.weight\n",
+      "bconv2.conv.bias xnor.3.conv.bias\n",
+      "bconv3.bn.weight xnor.4.bn.weight\n",
+      "bconv3.bn.bias xnor.4.bn.bias\n",
+      "bconv3.bn.running_mean xnor.4.bn.running_mean\n",
+      "bconv3.bn.running_var xnor.4.bn.running_var\n",
+      "bconv3.conv.weight xnor.4.conv.weight\n",
+      "bconv3.conv.bias xnor.4.conv.bias\n",
+      "bconv4.bn.weight xnor.6.bn.weight\n",
+      "bconv4.bn.bias xnor.6.bn.bias\n",
+      "bconv4.bn.running_mean xnor.6.bn.running_mean\n",
+      "bconv4.bn.running_var xnor.6.bn.running_var\n",
+      "bconv4.conv.weight xnor.6.conv.weight\n",
+      "bconv4.conv.bias xnor.6.conv.bias\n",
+      "bconv5.bn.weight xnor.7.bn.weight\n",
+      "bconv5.bn.bias xnor.7.bn.bias\n",
+      "bconv5.bn.running_mean xnor.7.bn.running_mean\n",
+      "bconv5.bn.running_var xnor.7.bn.running_var\n",
+      "bconv5.conv.weight xnor.7.conv.weight\n",
+      "bconv5.conv.bias xnor.7.conv.bias\n",
+      "bconv6.bn.weight xnor.8.bn.weight\n",
+      "bconv6.bn.bias xnor.8.bn.bias\n",
+      "bconv6.bn.running_mean xnor.8.bn.running_mean\n",
+      "bconv6.bn.running_var xnor.8.bn.running_var\n",
+      "bconv6.conv.weight xnor.8.conv.weight\n",
+      "bconv6.conv.bias xnor.8.conv.bias\n",
+      "bconv7.bn.weight xnor.10.bn.weight\n",
+      "bconv7.bn.bias xnor.10.bn.bias\n",
+      "bconv7.bn.running_mean xnor.10.bn.running_mean\n",
+      "bconv7.bn.running_var xnor.10.bn.running_var\n",
+      "bconv7.conv.weight xnor.10.conv.weight\n",
+      "bconv7.conv.bias xnor.10.conv.bias\n",
+      "bconv8.bn.weight xnor.11.bn.weight\n",
+      "bconv8.bn.bias xnor.11.bn.bias\n",
+      "bconv8.bn.running_mean xnor.11.bn.running_mean\n",
+      "bconv8.bn.running_var xnor.11.bn.running_var\n",
+      "bconv8.conv.weight xnor.11.conv.weight\n",
+      "bconv8.conv.bias xnor.11.conv.bias\n",
+      "bn2.running_mean xnor.12.running_mean\n",
+      "bn2.running_var xnor.12.running_var\n",
+      "conv9.weight xnor.13.weight\n",
+      "conv9.bias xnor.13.bias\n",
+      "conv1_1.weight xnor.0.weight\n",
+      "conv1_1.bias xnor.0.bias\n",
+      "bn1_1.running_mean xnor.1.running_mean\n",
+      "bn1_1.running_var xnor.1.running_var\n"
      ]
     }
    ],
@@ -64,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
