need better training

--- a/CIFAR_10/Activation.ipynb
+++ b/CIFAR_10/Activation.ipynb
@@ -345,6 +345,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getDiff(diff):\n",
+    "    output = []\n",
+    "    if len(diff) == 165 or len(diff) == 2259:\n",
+    "        for i in range(0,len(diff),3):\n",
+    "            output += [diff[i]]\n",
+    "    else:\n",
+    "        for i in range(0,len(diff)):\n",
+    "            output += [diff[i][0]]\n",
+    "    return output\n",
+    "\n",
+    "def calcAvg(Diff):\n",
+    "    Total = torch.zeros(len(Diff[0]))\n",
+    "    for item in Diff:\n",
+    "        Total += item\n",
+    "    avg = Total/len(Diff)\n",
+    "    print (avg)\n",
+    "\n",
+    "def fileAvg(filename):\n",
+    "    Data = torch.load(filename)\n",
+    "    Differences = getDiff(Data)\n",
+    "    calcAvg(Differences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([4.8501e-03, 9.0787e-01, 7.8004e+00, 1.2709e+02, 2.9573e+01, 1.6705e+02,\n",
+      "        1.0421e+03, 4.2285e+01, 8.7858e+02])\n",
+      "tensor([0.0091, 0.0059, 0.0760, 0.0888, 0.2937, 1.2942, 0.6536, 1.7197, 1.6381])\n",
+      "tensor([1.1118e-03, 3.5555e-01, 2.9627e+00, 4.7913e+01, 1.4386e+01, 8.7962e+01,\n",
+      "        5.9837e+02, 2.7590e+01, 5.6897e+02])\n",
+      "tensor([0.0021, 0.0023, 0.0289, 0.0335, 0.1429, 0.6815, 0.3753, 1.1221, 1.0608])\n"
+     ]
+    }
+   ],
+   "source": [
+    "fileAvg('Activations/upperDifferences.pt')\n",
+    "fileAvg('Activations/upperDifferencesVectorRelative.pt')\n",
+    "fileAvg('Activations/lowerDifferences.pt')\n",
+    "fileAvg('Activations/lowerDifferencesVectorRelative.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2259\n"
+     ]
+    }
+   ],
+   "source": [
+    "Data = torch.load('Activations/lowerDifferences.pt')\n",
+    "print (len(Data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,2,4):\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
