trained a different firstonly

--- a/CIFAR_10/Tests.ipynb
+++ b/CIFAR_10/Tests.ipynb
@@ -54,6 +54,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(range(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
