--- a/CIFAR_10/See Weights.ipynb
+++ b/CIFAR_10/See Weights.ipynb
@@ -2,32 +2,157 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "from models import nin_halfadd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = nin_halfadd.Net()\n",
+    "a = torch.load('nin.best.pth.tar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'state_dictt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-527ed85b870b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'nin.best.pth.tar'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mitems\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'state_dictt'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'state_dictt'"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[[[-1.7167e-01,  1.9712e-01, -3.2867e-03,  8.3091e-02, -3.4687e-02],\n",
+       "          [-4.9079e-02, -1.8293e-02, -1.3619e-01,  1.6181e-02,  1.4177e-01],\n",
+       "          [ 1.6374e-01, -3.7211e-02,  2.3019e-01,  1.8601e-01,  5.6781e-02],\n",
+       "          [ 1.4819e-01,  1.8884e-01,  1.7128e-01,  1.1761e-01,  2.0238e-01],\n",
+       "          [-2.0111e-01,  1.3056e-01, -3.3270e-02, -1.0366e-01,  2.0151e-01]],\n",
+       "\n",
+       "         [[-1.3295e-01, -1.5801e-01,  1.3198e-01, -7.0557e-04, -1.2966e-01],\n",
+       "          [-2.2175e-01, -2.0658e-01,  1.4274e-01, -2.1058e-01, -6.9711e-02],\n",
+       "          [ 5.6159e-02,  1.7294e-01,  1.4519e-01,  1.2734e-01,  1.7039e-01],\n",
+       "          [ 2.2577e-01, -4.3790e-02, -1.5375e-01,  9.1235e-02, -1.8440e-01],\n",
+       "          [ 1.2552e-01, -1.2206e-01,  1.8070e-01,  2.2283e-02, -1.7855e-02]],\n",
+       "\n",
+       "         [[ 1.4008e-01, -2.2018e-01,  1.0086e-01, -3.9825e-02, -1.5396e-01],\n",
+       "          [-4.9202e-02, -1.1638e-01, -1.9002e-01,  4.8871e-02, -1.4976e-01],\n",
+       "          [ 1.7882e-01, -2.1035e-01, -3.9577e-02,  8.7727e-02, -1.1036e-01],\n",
+       "          [ 2.0271e-02, -5.2249e-02,  8.4155e-02, -5.9287e-02,  2.2680e-01],\n",
+       "          [-5.2693e-03, -1.7677e-01, -5.7213e-02, -5.1936e-02, -9.8723e-02]]],\n",
+       "\n",
+       "\n",
+       "        [[[ 1.4179e-01,  1.2863e-02,  4.1344e-02,  9.4012e-02,  8.7886e-02],\n",
+       "          [ 1.9335e-02, -1.0929e-01, -1.5361e-01,  2.1192e-01, -1.8175e-01],\n",
+       "          [ 1.0777e-03,  8.6526e-02,  9.7023e-02,  1.1611e-01, -1.7480e-01],\n",
+       "          [-1.5184e-01,  1.4016e-02, -5.5665e-02,  2.3037e-02,  3.0676e-02],\n",
+       "          [ 7.8893e-02,  6.3471e-03,  1.1023e-01, -2.0985e-01,  1.9929e-01]],\n",
+       "\n",
+       "         [[ 1.2582e-01,  3.3816e-02,  1.3384e-01, -2.3024e-01,  1.2637e-01],\n",
+       "          [ 9.9112e-02,  3.0045e-02,  2.0052e-01,  9.5907e-02,  1.8043e-01],\n",
+       "          [-9.6835e-02, -5.6987e-02,  9.9796e-02, -4.4382e-02,  3.3831e-02],\n",
+       "          [-8.7733e-02, -2.1559e-01,  3.3227e-02, -1.8827e-01, -9.5405e-02],\n",
+       "          [ 3.7085e-03,  2.1689e-01, -1.7872e-01, -1.1892e-01,  1.3584e-01]],\n",
+       "\n",
+       "         [[-7.8936e-02,  3.3064e-02, -1.8700e-01,  1.5162e-01, -1.1982e-01],\n",
+       "          [ 5.2683e-02,  2.9972e-02,  1.3126e-01, -6.8277e-05,  2.2623e-01],\n",
+       "          [-9.9951e-02, -2.1313e-01,  1.5987e-01, -2.1035e-01, -1.5557e-03],\n",
+       "          [-6.0222e-02,  5.3120e-02,  1.0157e-01, -5.3943e-02, -2.5299e-02],\n",
+       "          [ 6.1606e-02, -1.2426e-01,  2.2715e-02,  6.4236e-02, -1.2345e-01]]],\n",
+       "\n",
+       "\n",
+       "        [[[ 2.0054e-01,  5.2470e-02,  1.9100e-01,  1.0362e-01,  2.2324e-01],\n",
+       "          [ 4.7465e-02, -4.3736e-02,  2.0907e-01,  1.3602e-01,  5.0382e-02],\n",
+       "          [-1.1539e-01,  3.6590e-02, -2.2745e-01,  3.8906e-02, -7.0887e-03],\n",
+       "          [ 1.8283e-01,  1.8317e-02,  4.9067e-02,  1.8297e-03,  9.0546e-03],\n",
+       "          [ 1.4981e-01,  1.0547e-01,  1.9585e-01,  1.9699e-01, -4.4798e-02]],\n",
+       "\n",
+       "         [[-2.7778e-02,  8.6962e-02, -1.8420e-01,  1.9160e-01,  7.0224e-02],\n",
+       "          [-8.6003e-02, -5.2818e-03,  1.7009e-01,  7.7529e-02, -9.1402e-02],\n",
+       "          [ 1.5543e-01, -2.2678e-01,  9.5862e-02,  2.0944e-01, -1.6324e-01],\n",
+       "          [-3.9012e-02,  2.2656e-01,  1.4800e-01,  6.7642e-02, -6.8135e-02],\n",
+       "          [ 2.1310e-01, -2.8867e-02,  9.5629e-02,  1.2949e-02,  9.0495e-02]],\n",
+       "\n",
+       "         [[-3.8644e-02,  1.3587e-01,  1.6096e-01,  1.6027e-01,  2.2912e-01],\n",
+       "          [-1.2505e-01, -2.1310e-01, -1.2112e-01, -3.3427e-02, -1.9192e-01],\n",
+       "          [ 1.2635e-01,  4.0777e-02,  1.3936e-01,  1.7140e-01, -1.3605e-01],\n",
+       "          [ 4.8677e-02,  5.1651e-02,  1.1213e-01, -1.4717e-01,  2.1010e-01],\n",
+       "          [-2.4354e-02,  2.1472e-01,  2.2036e-01, -1.8664e-01,  4.3422e-02]]],\n",
+       "\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "\n",
+       "        [[[-1.4570e-01, -1.0170e-01, -2.2810e-01,  1.8697e-01,  1.6942e-01],\n",
+       "          [ 1.1072e-01, -1.6098e-01, -2.3050e-01,  1.2134e-01,  1.1872e-01],\n",
+       "          [-2.2810e-01,  3.8926e-02,  1.0219e-02, -1.2816e-01,  1.4997e-01],\n",
+       "          [-2.0963e-01, -2.0973e-01, -1.0642e-01,  1.0185e-01, -1.4623e-01],\n",
+       "          [-3.6463e-02,  1.8651e-01,  8.8574e-03,  1.0677e-01, -1.3482e-01]],\n",
+       "\n",
+       "         [[ 6.3570e-04,  2.2111e-01,  1.8198e-01, -1.1968e-01, -2.1575e-01],\n",
+       "          [-1.0721e-02,  6.8333e-02,  1.1684e-01,  1.2109e-01,  2.2830e-01],\n",
+       "          [ 1.8205e-01,  1.5027e-01, -2.4570e-02, -5.4816e-02, -1.3576e-02],\n",
+       "          [ 1.0442e-01, -1.9661e-01, -1.3400e-01,  9.3155e-02, -1.3084e-01],\n",
+       "          [-9.5609e-02, -8.5890e-02,  7.1007e-02, -5.6099e-02,  1.9270e-01]],\n",
+       "\n",
+       "         [[ 2.0745e-01,  6.0361e-02,  1.0744e-01, -1.2487e-01, -2.1302e-01],\n",
+       "          [-1.9113e-01,  1.5967e-01, -1.5700e-01, -1.4664e-01,  2.4264e-02],\n",
+       "          [ 2.2075e-01,  2.1150e-01, -1.7729e-01, -2.1585e-02,  1.7596e-01],\n",
+       "          [ 2.3290e-02, -7.5167e-02,  1.9733e-01, -1.3722e-01,  3.0158e-02],\n",
+       "          [ 5.8337e-02, -1.4809e-01, -8.8191e-03, -2.1509e-01,  5.4954e-02]]],\n",
+       "\n",
+       "\n",
+       "        [[[ 1.9250e-01, -1.5194e-01, -7.9461e-02, -1.1381e-01,  1.9037e-01],\n",
+       "          [-7.3262e-02, -1.0042e-01, -4.3544e-02, -9.1309e-03,  1.7938e-01],\n",
+       "          [ 1.8980e-02,  1.4611e-01,  1.7009e-01,  1.6674e-01, -1.0225e-01],\n",
+       "          [ 8.4049e-02, -1.3650e-01, -2.2850e-01, -6.0147e-02, -1.2731e-02],\n",
+       "          [-5.3301e-02,  2.4062e-02, -9.0022e-02, -1.1998e-01,  2.0353e-01]],\n",
+       "\n",
+       "         [[-9.4010e-02, -1.3215e-02,  1.0140e-01, -1.4627e-01,  1.7283e-01],\n",
+       "          [ 1.8456e-02,  9.4934e-02,  1.9188e-01,  9.4276e-02, -1.2809e-01],\n",
+       "          [-3.6914e-02, -3.7428e-02, -1.8231e-01, -1.5004e-01, -6.5002e-02],\n",
+       "          [ 8.0844e-02,  1.3001e-01,  9.7450e-02, -7.3252e-02, -9.6964e-02],\n",
+       "          [-8.2222e-02, -8.4401e-02, -1.0790e-01, -1.7009e-01, -1.8462e-01]],\n",
+       "\n",
+       "         [[ 1.6027e-02,  8.5903e-02, -1.4024e-01, -2.0692e-01, -1.0569e-01],\n",
+       "          [ 2.2200e-01,  4.9406e-02,  9.7250e-02,  2.0934e-02,  3.1867e-02],\n",
+       "          [ 6.7295e-02,  2.0792e-01,  1.0822e-01,  1.0487e-03,  2.3755e-02],\n",
+       "          [-2.1556e-01,  1.8678e-01,  6.4994e-02, -1.7019e-01,  1.3476e-02],\n",
+       "          [ 2.0210e-01, -3.6590e-02,  2.0717e-01, -2.0244e-02,  1.3503e-01]]],\n",
+       "\n",
+       "\n",
+       "        [[[ 1.7514e-01,  3.6580e-02, -2.1612e-01, -1.7988e-01,  2.3032e-01],\n",
+       "          [-1.4185e-01, -2.1132e-01,  2.0193e-01,  1.8313e-01,  4.3735e-02],\n",
+       "          [ 3.2855e-02,  1.6447e-01,  2.0307e-02, -1.9860e-01,  7.9542e-02],\n",
+       "          [-8.4803e-02, -1.0860e-01, -4.4144e-02, -2.9818e-02, -1.3065e-02],\n",
+       "          [ 3.3571e-02,  1.7524e-01,  1.5312e-01, -1.6058e-01,  1.6009e-01]],\n",
+       "\n",
+       "         [[-1.2287e-01, -1.0527e-01,  2.0387e-01, -1.0077e-01, -2.2771e-01],\n",
+       "          [ 6.4339e-02,  4.7977e-02,  8.3674e-02, -4.8460e-02, -8.6218e-02],\n",
+       "          [-1.9199e-01,  4.8408e-03, -1.4545e-01,  1.0510e-01, -1.4212e-01],\n",
+       "          [-3.7736e-02, -9.8175e-02,  1.8623e-01, -7.4983e-02,  1.7971e-01],\n",
+       "          [ 1.9791e-01, -1.4771e-02,  1.2628e-01, -8.9005e-02,  1.3200e-01]],\n",
+       "\n",
+       "         [[-2.0224e-02, -1.4588e-01, -5.2747e-02, -9.8497e-02,  1.4365e-01],\n",
+       "          [-2.2076e-01, -1.2608e-02, -8.7077e-02, -2.3763e-02, -1.3921e-01],\n",
+       "          [-1.9405e-01, -5.4192e-02, -6.6808e-02,  8.0441e-02, -1.4196e-01],\n",
+       "          [ 1.4267e-02, -2.9174e-02, -1.3568e-01, -2.2137e-01,  1.7832e-01],\n",
+       "          [-4.6052e-02, -3.5800e-02,  1.2028e-01,  8.8521e-02,  1.2671e-01]]]],\n",
+       "       grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = torch.load('nin.best.pth.tar')"
+    "dict(model.named_parameters())['conv1.weight'] *2"
    ]
   },
   {
