--- a/CIFAR_10/See Weights.ipynb
+++ b/CIFAR_10/See Weights.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,6 +1232,94 @@
     "for items in a['state_dict']:\n",
     "    if items.find('.weight') != -1 and items.find('bn') == -1:\n",
     "        print (items, a['state_dict'][items])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([192])\n",
+      "torch.Size([192])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a['state_dict']['xnor.3.bn.running_mean'].size())\n",
+    "print(a['state_dict'][ 'xnor.3.bn.running_var'].size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['xnor.0.weight',\n",
+       " 'xnor.0.bias',\n",
+       " 'xnor.1.running_mean',\n",
+       " 'xnor.1.running_var',\n",
+       " 'xnor.3.bn.weight',\n",
+       " 'xnor.3.bn.bias',\n",
+       " 'xnor.3.bn.running_mean',\n",
+       " 'xnor.3.bn.running_var',\n",
+       " 'xnor.3.conv.weight',\n",
+       " 'xnor.3.conv.bias',\n",
+       " 'xnor.4.bn.weight',\n",
+       " 'xnor.4.bn.bias',\n",
+       " 'xnor.4.bn.running_mean',\n",
+       " 'xnor.4.bn.running_var',\n",
+       " 'xnor.4.conv.weight',\n",
+       " 'xnor.4.conv.bias',\n",
+       " 'xnor.6.bn.weight',\n",
+       " 'xnor.6.bn.bias',\n",
+       " 'xnor.6.bn.running_mean',\n",
+       " 'xnor.6.bn.running_var',\n",
+       " 'xnor.6.conv.weight',\n",
+       " 'xnor.6.conv.bias',\n",
+       " 'xnor.7.bn.weight',\n",
+       " 'xnor.7.bn.bias',\n",
+       " 'xnor.7.bn.running_mean',\n",
+       " 'xnor.7.bn.running_var',\n",
+       " 'xnor.7.conv.weight',\n",
+       " 'xnor.7.conv.bias',\n",
+       " 'xnor.8.bn.weight',\n",
+       " 'xnor.8.bn.bias',\n",
+       " 'xnor.8.bn.running_mean',\n",
+       " 'xnor.8.bn.running_var',\n",
+       " 'xnor.8.conv.weight',\n",
+       " 'xnor.8.conv.bias',\n",
+       " 'xnor.10.bn.weight',\n",
+       " 'xnor.10.bn.bias',\n",
+       " 'xnor.10.bn.running_mean',\n",
+       " 'xnor.10.bn.running_var',\n",
+       " 'xnor.10.conv.weight',\n",
+       " 'xnor.10.conv.bias',\n",
+       " 'xnor.11.bn.weight',\n",
+       " 'xnor.11.bn.bias',\n",
+       " 'xnor.11.bn.running_mean',\n",
+       " 'xnor.11.bn.running_var',\n",
+       " 'xnor.11.conv.weight',\n",
+       " 'xnor.11.conv.bias',\n",
+       " 'xnor.12.running_mean',\n",
+       " 'xnor.12.running_var',\n",
+       " 'xnor.13.weight',\n",
+       " 'xnor.13.bias']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a['state_dict'].keys()"
    ]
   },
   {
