--- a/CIFAR_10/Tests.ipynb
+++ b/CIFAR_10/Tests.ipynb
@@ -71,6 +71,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models import nin_crazy\n",
+    "from models import nin_halfadd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = nin_crazy.Net()\n",
+    "model2 = nin_halfadd.Net()\n",
+    "para2_file = torch.load(\"models/nin_crazy.ONE.pth.tar\")\n",
+    "para2 = para2_file['state_dict']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_pretrained(model, filePath, same):\n",
+    "    pretrained_model = torch.load(filePath)\n",
+    "    useState_dict = model.state_dict()\n",
+    "    preState_dict = pretrained_model['state_dict']\n",
+    "    best_acc = pretrained_model['best_acc']\n",
+    "\n",
+    "    if same:\n",
+    "        useState_dict = preState_dict\n",
+    "    else:\n",
+    "        useKeys = useState_dict.keys()\n",
+    "        preKeys = preState_dict.keys()\n",
+    "        j = 0\n",
+    "        for key in useKeys:\n",
+    "\n",
+    "            if j == 59:\n",
+    "                j = 0\n",
+    "            useState_dict[key].data = preState_dict[preKeys[j]].data\n",
+    "            j +=1\n",
+    "    model.load_state_dict(useState_dict)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elsemodel = load_pretrained(model = model2, filePath = \"models/nin_crazy.2d.pth.tar\", same = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ExBitInverse(x):\n",
+    "    Expo = (x.log2().floor())\n",
+    "    num = x * pow(2,2 * (-Expo))\n",
+    "    return num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([19.]), 0.07421875)\n",
+      "(tensor([9.]), 0.140625)\n",
+      "(tensor([14.]), 0.21875)\n",
+      "(tensor([0.]), nan)\n",
+      "(tensor([19.]), 0.07421875)\n",
+      "(tensor([5.]), 0.3125)\n",
+      "(tensor([4.]), 0.25)\n",
+      "(tensor([9.]), 0.140625)\n",
+      "(tensor([5.]), 0.3125)\n",
+      "(tensor([0.]), nan)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(10):\n",
+    "    a = torch.randint(0,20,[1]).to(torch.float32)\n",
+    "    #a = torch.Tensor([8])\n",
+    "    num = ExBitInverse(a) \n",
+    "    print(a, num.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
