rand drop times

--- a/CIFAR_10/Tests.ipynb
+++ b/CIFAR_10/Tests.ipynb
@@ -172,6 +172,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[  364.2174,  1077.2487, -1976.3032,   823.4763,   -17.1071,   155.8600],\n",
+      "        [  167.6001, -2167.5969,  1640.8624,  1372.7747,   363.8687, -1409.4314],\n",
+      "        [ -364.8358,   792.5723,  1474.2889,  -392.2496,  1006.5197, -1154.2645],\n",
+      "        [ -803.0588,  1037.0364,  1062.8910, -1036.6257,   183.8918,   635.3771],\n",
+      "        [  -58.4625, -1998.2662,    13.5549,   706.7608,  -376.5291,  -661.2606]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = torch.randn([3,4,5,6])\n",
+    "mean = 10\n",
+    "std = 1000\n",
+    "size = b[0,0,:,:].size()\n",
+    "a = torch.normal(mean = mean * torch.ones(size), std = std)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
