great bug discovered

--- a/CIFAR_10/Activation.ipynb
+++ b/CIFAR_10/Activation.ipynb
@@ -319,32 +319,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fuccc = torch.zeros([1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(fuccc.view(-1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
@@ -374,63 +348,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([4.8501e-03, 9.0787e-01, 7.8004e+00, 1.2709e+02, 2.9573e+01, 1.6705e+02,\n",
-      "        1.0421e+03, 4.2285e+01, 8.7858e+02])\n",
-      "tensor([0.0091, 0.0059, 0.0760, 0.0888, 0.2937, 1.2942, 0.6536, 1.7197, 1.6381])\n",
-      "tensor([1.1118e-03, 3.5555e-01, 2.9627e+00, 4.7913e+01, 1.4386e+01, 8.7962e+01,\n",
-      "        5.9837e+02, 2.7590e+01, 5.6897e+02])\n",
-      "tensor([0.0021, 0.0023, 0.0289, 0.0335, 0.1429, 0.6815, 0.3753, 1.1221, 1.0608])\n"
+      "7.316678003582084 1.7501091585293278 2.937095093374366 0.7274738022670195\n"
      ]
     }
    ],
    "source": [
-    "fileAvg('Activations/upperDifferences.pt')\n",
-    "fileAvg('Activations/upperDifferencesVectorRelative.pt')\n",
-    "fileAvg('Activations/lowerDifferences.pt')\n",
-    "fileAvg('Activations/lowerDifferencesVectorRelative.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2259\n"
-     ]
-    }
-   ],
-   "source": [
-    "Data = torch.load('Activations/lowerDifferences.pt')\n",
-    "print (len(Data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(0,2,4):\n",
-    "    print (i)"
+    "rel = []\n",
+    "for _ in range(200):\n",
+    "    conv = nn.Conv2d(1, 1, kernel_size=5, stride=1)\n",
+    "    Input = torch.randn([1, 1, 100, 100])\n",
+    "    Input = Input / Input.abs().max()\n",
+    "    state_dict = conv.state_dict()\n",
+    "    weight = conv.state_dict()['weight']\n",
+    "    nweight = weight / weight.abs().max()\n",
+    "    state_dict['weight'] = torch.Tensor(nweight)\n",
+    "    conv.load_state_dict(state_dict)\n",
+    "    oriOutput = conv(Input)\n",
+    "    state_dict = conv.state_dict()\n",
+    "    weight = conv.state_dict()['weight'].numpy().copy()\n",
+    "    std = []\n",
+    "    for i in range(5):\n",
+    "        for j in range(5):\n",
+    "            cweight = weight.copy()\n",
+    "            cweight[0,0,i,j] = float(weight[0,0,i,j] * -1.)\n",
+    "            state_dict['weight'] = torch.Tensor(cweight)\n",
+    "            conv.load_state_dict(state_dict)\n",
+    "            Output = conv(Input)\n",
+    "            std += [float((Output / oriOutput)[0,0].std())]\n",
+    "            #print('%.4f %.4f'%(float(Output.mean()/oriOutput.mean()), float(Output.std()/oriOutput.std())))\n",
+    "            state_dict['weight'] = torch.Tensor(weight)\n",
+    "            conv.load_state_dict(state_dict)\n",
+    "    std = np.array(std)\n",
+    "    #print(std.max(), std.mean(), std.max()/std.mean())\n",
+    "    rel += [std.max()/std.mean()]\n",
+    "rel = np.array(rel)\n",
+    "print(rel.max(), rel.min(), rel.mean(), rel.std())"
    ]
   },
   {
@@ -443,9 +402,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python2 (py2env)",
    "language": "python",
-   "name": "python2"
+   "name": "testenv"
   },
   "language_info": {
    "codemirror_mode": {
