--- a/CIFAR_10/make_subset.ipynb
+++ b/CIFAR_10/make_subset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,8 +32,8 @@
     }
    ],
    "source": [
-    "class_size = 1000\n",
-    "class_num  = 10\n",
+    "class_size = 100\n",
+    "class_num  = 100\n",
     "slice_num  = 2\n",
     "for k in range(10):\n",
     "    thearray = []\n",
@@ -47,7 +47,7 @@
     "            if j == class_size/slice_num:\n",
     "                break\n",
     "    print(len(thearray))\n",
-    "    np.save('subHalf%d'%(k), thearray)"
+    "    np.save('subHalf100C%d'%(k), thearray)"
    ]
   },
   {
